<resources>
    <string name="app_name">My Wallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Wallet</string>
    <string name="nav_header_subtitle">Manage your finances</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_movements">Movements</string>

    <string name="name_account">Nombre Cuenta</string>
    <string name="initial_balance">Saldo Inicial</string>

    <string name="fab_add_account">Agregar Cuenta</string>

    <string name="dialog_category">Inserte nombre</string>

    <string name="fab_add_category">Agregar Categoria</string>

    <string-array name="currencies">
        <item>ARS</item>
        <item>USD</item>
        <item>EUR</item>
    </string-array>

    <string name="add_account">Agregar cuenta</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
</resources>