<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_accounts" />

        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_category"
            android:title="@string/menu_categories" />

        <item
            android:id="@+id/nav_movements"
            android:icon="@drawable/ic_menu_category"
            android:title="@string/menu_movements" />
    </group>
</menu>