<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="220dp">
<EditText
    android:id="@+id/etAccount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/name_account"
    android:textColorHint="@color/white"
    android:textColor="@color/white"
    />

    <EditText
        android:id="@+id/etBalance"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/initial_balance"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/spCurrency"
            android:entries="@array/currencies"
            />

    <Button
        android:id="@+id/btnSave"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fab_add_account"
        android:gravity="center_horizontal"
        />
</LinearLayout>